--- a/index.html
+++ b/index.html
@@ -1,117 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-image: url('download.jfif');
-            background-size: cover;
-            background-attachment: fixed;
-        }
-        .transparent-box {
-            background-color: rgba(255, 255, 255, 0.8);
-        }
-        header, .category-bar, .product, .about, footer, .login-popup {
-            background-color: rgba(255, 255, 255, 0.8);
-        }
-        #user-info {
-            margin-left: 10px;
-            font-weight: bold;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    @font-face {
+      font-family: 'Snap ITC';
+      src: local('Snap ITC');
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Bahnschrift', sans-serif;
+      background: url('https://www.dropbox.com/scl/fi/6scs34cfiffalea8m5r6k/download.jfif?rlkey=9me88jua5fx4vxiizskj1lk3e&st=js2tc74z&raw=1') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .logo {
+      font-size: 32px;
+      font-family: 'Snap ITC';
+      font-weight: 700;
+      color: #e63946;
+      text-shadow: 2px 2px 0 #000;
+    }
+
+    .nav-right {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+      font-weight: bold;
+    }
+
+    .nav-links a:hover {
+      color: #ff6b6b;
+    }
+
+    .search-filter {
+      text-align: center;
+      margin: 20px auto 5px;
+    }
+
+    .search-filter input[type="text"] {
+      padding: 8px;
+      width: 300px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    .category-bar {
+      text-align: center;
+      margin: 10px 0;
+    }
+
+    .category-bar span {
+      color: black;
+      background: rgba(255,255,255,0.8);
+      padding: 5px 15px;
+      margin: 0 5px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 80px 20px 40px;
+      background: rgba(0,0,0,0.4);
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      padding: 40px;
+      background: rgba(0,0,0,0.3);
+    }
+
+    .product {
+      background: rgba(255,255,255,0.85);
+      color: #000;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .product:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #000;
+    }
+
+    .product img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+
+    .product-info {
+      padding: 15px;
+      text-align: center;
+    }
+
+    .product-info h3 {
+      margin-bottom: 10px;
+    }
+
+    .buy-btn {
+      background-color: #e63946;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .buy-btn:hover {
+      background-color: #d90429;
+    }
+
+    #about-content {
+      padding: 20px;
+      margin-top: 40px;
+      background: rgba(255, 255, 255, 0.9);
+      color: black;
+      display: none;
+    }
+
+    footer {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+
+    #loginPopup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255,255,255,0.95);
+      color: black;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px #000;
+    }
+
+    #loginPopup input {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+    }
+
+    #loginPopup button {
+      background: #e63946;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="FA-Tshirt Logo">
-            <span>FA-Tshirt</span>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search...">
-        </div>
-        <div class="header-buttons">
-            <button onclick="toggleLoginPopup()">Login</button>
-            <span id="user-info"></span>
-            <button>Cart</button>
-        </div>
-    </header>
-    <div class="category-bar">
-        <button>Men</button>
-        <button>Women</button>
-        <button>New Arrivals</button>
-        <button>Best Sellers</button>
+  <header>
+    <div class="logo">FA-Tshirt</div>
+    <div class="nav-right">
+      <nav class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#products">Products</a>
+        <a href="#about" onclick="showAbout()">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <a href="#" onclick="showLogin()" style="color:white">Login</a>
+      <a href="#" style="color:white">Cart</a>
     </div>
-    <div class="product-listing">
-        <div class="product">
-            <img src="tshirt1.png" alt="T-shirt 1">
-            <h3>Classic Black Tee</h3>
-            <p>₹299</p>
-            <button>Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="tshirt2.png" alt="T-shirt 2">
-            <h3>Red Graphic Tee</h3>
-            <p>₹299</p>
-            <button>Add to Cart</button>
-        </div>
-        <!-- More products -->
+  </header>
+
+  <div class="search-filter">
+    <input type="text" placeholder="Search for t-shirts...">
+  </div>
+
+  <div class="category-bar">
+    <span>Men</span>
+    <span>Women</span>
+    <span>Kids</span>
+  </div>
+
+  <section class="hero" id="home">
+    <h1>Welcome to FA-Tshirt</h1>
+    <p>Trendy | Comfortable | Affordable</p>
+  </section>
+
+  <section class="products" id="products">
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <div class="product-info">
+        <h3>Black Round Neck</h3>
+        <p>₹299</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
     </div>
-    <div class="about">
-        <h2>About FA-Tshirt</h2>
-        <p>FA-Tshirt brings you high-quality, stylish, and affordable t-shirts made for everyone. We focus on comfort, durability, and bold designs that stand out.</p>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <div class="product-info">
+        <h3>White Graphic Tee</h3>
+        <p>₹349</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
     </div>
-    <footer>
-        <p>&copy; 2025 FA-Tshirt. All rights reserved.</p>
-    </footer>
-
-    <!-- Login Popup -->
-    <div class="login-popup" id="loginPopup" style="display:none;">
-        <div class="popup-content">
-            <span onclick="toggleLoginPopup()" style="float:right;cursor:pointer;">&times;</span>
-            <h2>Login</h2>
-            <input type="text" id="username" placeholder="Enter your name">
-            <button onclick="login()">Login</button>
-        </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <div class="product-info">
+        <h3>Red Street Style</h3>
+        <p>₹399</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
     </div>
+  </section>
 
-    <script>
-        function toggleLoginPopup() {
-            const popup = document.getElementById('loginPopup');
-            popup.style.display = popup.style.display === 'none' ? 'block' : 'none';
-        }
+  <section id="about-content">
+    <h2>Our Story</h2>
+    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
+  </section>
 
-        function login() {
-            const username = document.getElementById('username').value.trim();
-            if (username) {
-                localStorage.setItem('fa_user', username);
-                showUserInfo();
-                toggleLoginPopup();
-            }
-        }
+  <footer>
+    &copy; 2025 FA-Tshirt. All rights reserved.
+  </footer>
 
-        function showUserInfo() {
-            const user = localStorage.getItem('fa_user');
-            const userInfo = document.getElementById('user-info');
-            if (user) {
-                userInfo.innerHTML = `Welcome, ${user} <button onclick="logout()">Logout</button>`;
-            } else {
-                userInfo.innerHTML = '';
-            }
-        }
+  <div id="loginPopup">
+    <h2>Login</h2>
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button onclick="alert('Login Successful')">Login</button>
+  </div>
 
-        function logout() {
-            localStorage.removeItem('fa_user');
-            showUserInfo();
-        }
-
-        window.onload = function() {
-            showUserInfo();
-        }
-    </script>
+  <script>
+    function showAbout() {
+      document.getElementById('about-content').style.display = 'block';
+      window.scrollTo(0, document.getElementById('about-content').offsetTop);
+    }
+    function showLogin() {
+      document.getElementById('loginPopup').style.display = 'block';
+    }
+  </script>
 </body>
 </html>
