--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -10,22 +10,31 @@
       font-family: 'Snap ITC';
       src: local('Snap ITC');
     }
+
     * {
-      margin: 0; padding: 0; box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
+
     body {
       font-family: 'Bahnschrift', sans-serif;
       background: url('https://www.dropbox.com/scl/fi/6scs34cfiffalea8m5r6k/download.jfif?rlkey=9me88jua5fx4vxiizskj1lk3e&st=js2tc74z&raw=1') no-repeat center center fixed;
-      background-size: cover; color: #fff;
+      background-size: cover;
+      color: #fff;
     }
+
     header {
       background-color: rgba(0, 0, 0, 0.5);
       padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky; top: 0; z-index: 1000;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
+
     .logo {
       font-size: 32px;
       font-family: 'Snap ITC';
@@ -33,47 +42,74 @@
       color: #e63946;
       text-shadow: 2px 2px 0 #000;
     }
+
     .nav-right {
       display: flex;
       align-items: center;
       gap: 20px;
     }
+
     .nav-links a {
       color: white;
       text-decoration: none;
       margin: 0 10px;
       font-weight: bold;
     }
-    .nav-links a:hover { color: #ff6b6b; }
-    .search-filter { text-align: center; margin: 20px auto 5px; }
+
+    .nav-links a:hover {
+      color: #ff6b6b;
+    }
+
+    .search-filter {
+      text-align: center;
+      margin: 20px auto 5px;
+    }
+
     .search-filter input[type="text"] {
       padding: 8px;
       width: 300px;
       border-radius: 5px;
       border: none;
     }
+
     .category-bar {
-      text-align: center; margin: 10px 0;
+      text-align: center;
+      margin: 10px 0;
     }
+
     .category-bar span {
-      color: black; background: rgba(255,255,255,0.8);
-      padding: 5px 15px; margin: 0 5px;
+      color: black;
+      background: rgba(255,255,255,0.8);
+      padding: 5px 15px;
+      margin: 0 5px;
       border-radius: 5px;
       cursor: pointer;
       font-weight: bold;
     }
+
     .hero {
-      text-align: center; padding: 80px 20px 40px;
+      text-align: center;
+      padding: 80px 20px 40px;
       background: rgba(0,0,0,0.4);
     }
-    .hero h1 { font-size: 48px; margin-bottom: 20px; }
-    .hero p { font-size: 20px; }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+    }
+
     .products {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 30px; padding: 40px;
+      gap: 30px;
+      padding: 40px;
       background: rgba(0,0,0,0.3);
     }
+
     .product {
       background: rgba(255,255,255,0.85);
       color: #000;
@@ -81,73 +117,132 @@
       overflow: hidden;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
     .product:hover {
       transform: scale(1.05);
       box-shadow: 0 0 20px #000;
     }
+
     .product img {
-      width: 100%; height: 250px; object-fit: cover;
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
     }
-    .product-info { padding: 15px; text-align: center; }
-    .product-info h3 { margin-bottom: 10px; }
+
+    .product-info {
+      padding: 15px;
+      text-align: center;
+    }
+
+    .product-info h3 {
+      margin-bottom: 10px;
+    }
+
     .buy-btn {
       background-color: #e63946;
-      border: none; color: white;
-      padding: 10px 20px; cursor: pointer;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      cursor: pointer;
       border-radius: 5px;
     }
-    .buy-btn:hover { background-color: #d90429; }
-    #about-content {
-      padding: 20px; margin-top: 40px;
-      background: rgba(255, 255, 255, 0.9);
-      color: black; display: none;
+
+    .buy-btn:hover {
+      background-color: #d90429;
     }
+
+    #about-content {
+      padding: 20px;
+      margin-top: 40px;
+      background: rgba(255, 255, 255, 0.9);
+      color: black;
+      display: none;
+    }
+
     footer {
       background: rgba(0, 0, 0, 0.6);
-      padding: 20px; text-align: center;
+      padding: 20px;
+      text-align: center;
       color: white;
     }
+
     #loginPopup {
       display: none;
       position: fixed;
-      top: 50%; left: 50%;
+      top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
       background: rgba(255,255,255,0.95);
       color: black;
-      padding: 20px; border-radius: 10px;
+      padding: 20px;
+      border-radius: 10px;
       box-shadow: 0 0 15px #000;
-      animation: fadeIn 0.5s ease-in-out;
+      width: 300px;
+      animation: fadeIn 0.3s ease;
     }
-    #loginPopup.shake {
-      animation: shake 0.4s;
+
+    #loginPopup h2 {
+      margin-top: 0;
     }
-    @keyframes shake {
-      0%, 100% { transform: translate(-50%, -50%); }
-      25% { transform: translate(-48%, -50%); }
-      50% { transform: translate(-52%, -50%); }
-      75% { transform: translate(-48%, -50%); }
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.8); }
-      to { opacity: 1; transform: scale(1); }
-    }
+
     #loginPopup input {
       display: block;
       width: 100%;
       margin: 10px 0;
       padding: 10px;
     }
+
     #loginPopup button {
       background: #e63946;
-      color: white; border: none;
+      color: white;
+      border: none;
       padding: 10px 15px;
       cursor: pointer;
     }
-    .error-msg {
+
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 18px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .error {
       color: red;
       font-size: 14px;
-      text-align: center;
+      margin-top: 10px;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes shake {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
+      100% { transform: translateX(0); }
+    }
+
+    #profilePage, #otpPage {
+      display: none;
+      background: rgba(255,255,255,0.95);
+      color: black;
+      padding: 30px;
+      border-radius: 10px;
+      width: 300px;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 0 15px #000;
+      animation: fadeIn 0.3s ease;
+    }
+
   </style>
 </head>
 <body>
@@ -161,7 +256,7 @@
         <a href="#contact">Contact</a>
       </nav>
       <a href="#" onclick="showLogin()" style="color:white">Login</a>
-      <a href="#" style="color:white">Cart (<span id="cartCount">0</span>)</a>
+      <a href="#" style="color:white">Cart</a>
     </div>
   </header>
 
@@ -170,7 +265,9 @@
   </div>
 
   <div class="category-bar">
-    <span>Men</span><span>Women</span><span>Kids</span>
+    <span>Men</span>
+    <span>Women</span>
+    <span>Kids</span>
   </div>
 
   <section class="hero" id="home">
@@ -179,14 +276,7 @@
   </section>
 
   <section class="products" id="products">
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80">
-      <div class="product-info">
-        <h3>Black Round Neck</h3>
-        <p>₹299</p>
-        <button class="buy-btn" onclick="addToCart()">Add to Cart</button>
-      </div>
-    </div>
+    <!-- Product Items -->
   </section>
 
   <section id="about-content">
@@ -194,14 +284,28 @@
     <p>FA-Tshirt is not just a brand...</p>
   </section>
 
-  <footer>&copy; 2025 FA-Tshirt. All rights reserved.</footer>
+  <footer>
+    &copy; 2025 FA-Tshirt. All rights reserved.
+  </footer>
 
   <div id="loginPopup">
+    <span class="close-btn" onclick="closeLogin()">X</span>
     <h2>Login</h2>
-    <input type="text" id="username" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <div class="error-msg" id="errorMsg"></div>
+    <input type="text" id="loginEmail" placeholder="Email">
+    <input type="password" id="loginPassword" placeholder="Password">
     <button onclick="validateLogin()">Login</button>
+    <div class="error" id="loginError"></div>
+  </div>
+
+  <div id="otpPage">
+    <h2>Enter OTP</h2>
+    <input type="text" placeholder="Enter OTP">
+    <button onclick="showProfile()">Verify OTP</button>
+  </div>
+
+  <div id="profilePage">
+    <h2>Welcome, User!</h2>
+    <p>This is your profile page.</p>
   </div>
 
   <script>
@@ -214,28 +318,29 @@
       document.getElementById('loginPopup').style.display = 'block';
     }
 
-    function validateLogin() {
-      const email = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-      const error = document.getElementById("errorMsg");
-      const popup = document.getElementById("loginPopup");
+    function closeLogin() {
+      document.getElementById('loginPopup').style.display = 'none';
+      document.getElementById('loginError').textContent = '';
+    }
 
-      if (email !== "admin@gmail.com" || pass !== "12345") {
-        error.innerText = "Invalid Gmail or Password!";
-        popup.classList.add("shake");
-        setTimeout(() => popup.classList.remove("shake"), 400);
+    function validateLogin() {
+      const email = document.getElementById('loginEmail').value;
+      const pass = document.getElementById('loginPassword').value;
+      const errorBox = document.getElementById('loginError');
+
+      if (email === 'user@gmail.com' && pass === '1234') {
+        document.getElementById('loginPopup').style.display = 'none';
+        document.getElementById('otpPage').style.display = 'block';
       } else {
-        error.innerText = "";
-        alert("Login Successful!");
-        popup.style.display = "none";
+        errorBox.textContent = 'Invalid Gmail or Password';
+        document.getElementById('loginPopup').style.animation = 'shake 0.3s';
+        setTimeout(() => document.getElementById('loginPopup').style.animation = '', 300);
       }
     }
 
-    let cartCount = 0;
-    function addToCart() {
-      cartCount++;
-      document.getElementById("cartCount").innerText = cartCount;
-      alert("Added to cart!");
+    function showProfile() {
+      document.getElementById('otpPage').style.display = 'none';
+      document.getElementById('profilePage').style.display = 'block';
     }
   </script>
 </body>
